--- a/app/static/style.css
+++ b/app/static/style.css
@@ -20,3 +20,15 @@ body {
     font-size: 14px;
     text-align: center;
 }
+
+.error_main{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30px;
+}
+
+.main{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 20px;
+}
