--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -30,5 +30,9 @@ body {
 .main{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
+    margin-top: 3em;
+}
+
+.btn{
+    margin-top: 0.5em;
 }
