--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -1,18 +1,24 @@
+.navbar {
+	margin-bottom: 20px;
+}
+
 video {
 	width: 100%;
 }
 
-.menu {
-    height: 98%;
-    background-color: rgba(0, 0, 0, .5);
+.container {
+	position: relative;
 }
-.menu, .menu-wrapper {
-    /*position: absolute;*/
-    /*top: 50%;*/
-    /*left: 50%;*/
-    /*transform: translate(-50%, -51%);*/
-    /*width: 100%;*/
+
+.menu {
+    position: absolute;
+    height: 98%;
+    top: 0;
+    left: 1em;
+    padding-top: 20%;
+    width: 98%;
     /*padding: 0;*/
+    background-color: rgba(0, 0, 0, .2);
     text-align: center;
     align-items: center;
     justify-content: center;
@@ -36,4 +42,22 @@ video {
 
 .hide {
 	display: none;
+}
+
+.blurred { 
+    filter: blur(10px); 
+    transition: 0.5s filter linear;
+	-webkit-transition: 0.5s -webkit-filter linear;
+	-moz-transition: 0.5s -moz-filter linear;
+	-ms-transition: 0.5s -ms-filter linear;
+	-o-transition: 0.5s -o-filter linear;
+} 
+
+.unblurred {
+	filter: blur(0px); 
+	transition: 0.2s filter linear;
+	-webkit-transition: 0.2s -webkit-filter linear;
+	-moz-transition: 0.2s -moz-filter linear;
+	-ms-transition: 0.2s -ms-filter linear;
+	-o-transition: 0.2s -o-filter linear;
 }
