--- a/app/templates/movie/movie.html.j2
+++ b/app/templates/movie/movie.html.j2
@@ -16,7 +16,6 @@
 
 {% block script %}
 	{{ super() }}
-    {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> #}
     <script src="{{ url_for('static', filename='js/movie.js') }}"></script>
 {% endblock %}
 
@@ -24,21 +23,17 @@
     {% include('navbar.tpl') %}
     <div class="container">
 		<div id="video" class="video">
-	        {# <video autoplay="autoplay"> #}
-	        <video id="videoPlayer">
-	            <source src="{{ url_for('static', filename='videos/1.webm') }}" type="video/webm">
+	        <video id="videoPlayer" controls>
+	            <source id="videoSource" src="{{ url_for('static', filename='videos/1.webm') }}" type="video/webm">
 	        </video>
 		</div>
-	    <div id="menu" class="menu" data-current-id="1">
-	    	 <div class="initial">
-                <h3>The Game.</h1>
-                <a onclick="start_game()">Let's begin...<a>
+	    <div id="menu" class="menu hide" data-current-id="1">
+            <div id="optionsLabel" class="options_label">
+                <h3></h3>
             </div>
 
-            <div id="options" class="options hide">
+            <div id="options" class="options">
                 <ul id=optionList>
-                    {# <li><a id="2a">Go left</a></li> #}
-                    {# <li><a id="2b">Go right</a></li> #}
                 </ul>
             </div>
 		</div>
