--- a/app/templates/movie/movie.html.j2
+++ b/app/templates/movie/movie.html.j2
@@ -23,7 +23,7 @@
     {% include('navbar.tpl') %}
     <div class="container">
 		<div id="video" class="video">
-	        <video id="videoPlayer" controls>
+	        <video id="videoPlayer">
 	            <source id="videoSource" src="{{ url_for('static', filename='videos/1.webm') }}" type="video/webm">
 	        </video>
 		</div>
