--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -64,11 +64,19 @@ video::-webkit-media-controls {
 	-o-transition: 0.5s -o-filter linear;
 } 
 
-.unblurred {
+/*.unblurred {
 	filter: blur(0px); 
 	transition: 0.2s filter linear;
 	-webkit-transition: 0.2s -webkit-filter linear;
 	-moz-transition: 0.2s -moz-filter linear;
 	-ms-transition: 0.2s -ms-filter linear;
 	-o-transition: 0.2s -o-filter linear;
+}*/
+
+.pseudofullscreen {
+	position: fixed; right: 0; top: 0;
+    min-width: 100%; min-height: 100%;
+    width: auto; height: auto; z-index: -100;
+    /*background: url(polina.jpg) no-repeat;*/
+    /*background-size: cover;*/
 }
