--- a/app/templates/finance/interest.html.j2
+++ b/app/templates/finance/interest.html.j2
@@ -59,7 +59,7 @@
 {% endblock %}
 
 {% block content %}
-    {% include('navbar.tpl') %}
+    {% include('navbar.html.j2') %}
     <div class="container main">
     	<div class="col-12">
     		<form action="/uroky" method="post" class="form form-group form-control">
