--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -23,7 +23,6 @@
             </div>
           </li>
 
-          {#
            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Školní
@@ -31,10 +30,10 @@
 
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/mms">Multimediální systém - seminární práce</a>
-              <a class="dropdown-item" href="/pexeso">Pexeso - seminární práce</a>
+              <!-- <a class="dropdown-item" href="/pexeso">Pexeso - seminární práce</a> -->
+              <a class="dropdown-item" href="/movie">Multimediální aplikace - seminární práce</a>
             </div>
           </li>
-          #}
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -42,7 +41,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/songbooks">Zpěvníky</a>
-              <a class="dropdown-item" href="/bunkrs">Bunkrs</a>
+              <!-- <a class="dropdown-item" href="/bunkrs">Bunkrs</a> -->
             </div>
           </li>
 
