Add a lot - somewhat working version

--- a/app/templates/movie/movie.html.j2
+++ b/app/templates/movie/movie.html.j2
@@ -21,13 +21,13 @@
 
 {% block content %}
     {% include('navbar.html.j2') %}
-    <div class="container">
+    <div id="container" class="container">
 		<div id="video" class="video">
 	        <video id="videoPlayer">
 	            <source id="videoSource" src="{{ url_for('static', filename='videos/1.webm') }}" type="video/webm">
 	        </video>
 		</div>
-	    <div id="menu" class="menu hide">
+	    <div id="menu" class="menu">
             <div id="optionsLabel" class="options_label">
             </div>
 
