--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -78,3 +78,7 @@ video::-webkit-media-controls {
     min-width: 100%; min-height: 100%;
     width: auto; height: auto; z-index: -100;
 }
+
+.nocursor {
+    cursor: none;
+}
