--- a/app/static/css/movie.css
+++ b/app/static/css/movie.css
@@ -16,11 +16,13 @@ video::-webkit-media-controls {
 
 .menu {
     position: absolute;
-    height: 100%;
+    height: 50%;
     top: 0;
     left: 1em;
     margin-top: 20%;
     width: 98%;
+    padding-left: 20%;
+    padding-right: 20%;
     background-color: rgba(0, 0, 0, .2);
     text-align: center;
     align-items: center;
