Fixes and improvements

--- a/app/templates/poezie/index.html.j2
+++ b/app/templates/poezie/index.html.j2
@@ -14,9 +14,9 @@
 			<div class="col">
 				<form class="form-group" action="/poezie/post" method="post">
 					Báseň: <input class="form-control" type="text" name="name">
-					Umístil: <input class="form-control" type="text" name="autor">
-					X: <input class="form-control" id="coords_x" name="coords_x" >
-					Y: <input class="form-control" id="coords_y" name="coords_y" >
+					Umístil: <input class="form-control" type="text" name="created_by">
+					X: <input class="form-control" id="coords_x" name="latitude" >
+					Y: <input class="form-control" id="coords_y" name="longitude" >
 					<input class="btn btn-primary" type="submit" name="submit" value="Uložit">
 				</form>
 			</div>
