--- a/app/templates/poezie/show.html.j2
+++ b/app/templates/poezie/show.html.j2
@@ -1,11 +1,6 @@
 {% extends "base.tpl" %}
 {% block title %}Básně hor{% endblock %}
 
-{% block script %}
-    {# {% include 'javascript/stimulus.js.html' %} #}
-    {# {% include 'javascript/smaps.js.html' %} #}
-{% endblock %}
-
 {% block links %}
 	{{ super() }}
 	<script src="https://api.mapy.cz/loader.js"></script>
@@ -15,14 +10,20 @@
 {% block content %}
 	{% include('navbar.html.j2') %}
 	<div class="container">
-		Name: {{poezie.name}}
-		Author: {{poezie.author}}
-		X: {{poezie.x}}
-		Y: {{poezie.y}}
-		<input type="hidden" id="name" value="{{ poezie.name }}">
-		<input type="hidden" id="coords_x" value="{{ poezie.x }}">
-		<input type="hidden" id="coords_y" value="{{ poezie.y }}">
+		<div class="col">		
+			Name: {{ poezie.name }}<br>
+			Author: {{ poezie.created_by }}<br>
+			X: {{ poezie.longitude }}<br>
+			Y: {{ poezie.latitude }}
+			<input type="hidden" id="name" value="{{ poezie.name }}">
+			<input type="hidden" id="coords_x" value="{{ poezie.longitude }}">
+			<input type="hidden" id="coords_y" value="{{ poezie.latitude }}">
+		</div>
+		<div class="col" data-controller="smaps">
+			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
+		</div>
 	</div>
+
 	<script type="text/javascript">
       	/* Create map */
 		var center = SMap.Coords.fromWGS84(14.41, 50.08);
@@ -32,13 +33,13 @@
 		map.addControl(new SMap.Control.Sync()); /* Aby mapa reagovala na změnu velikosti průhledu */
 		layer = add_marker_layer(map);
 
-		coords_x = $("#coords_x")[0].val()
-		coords_y = $("#coords_y")[0].val()
-		name = $("#name")[0].val()
+		var coords_x = $("#coords_x")[0].value
+		var coords_y = $("#coords_y")[0].value
+		var name = $("#name")[0].value
 
-		marker_coords = SMap.Coords.fromWGS84(coords_x, coords_y)
+		var marker_coords = SMap.Coords.fromWGS84(coords_y, coords_x)
 
-		add_marker(layer, marker_coords, name)
+		var marker = add_marker(layer, marker_coords, name)
 
     function add_marker_layer(map){
 		var layer = new SMap.Layer.Marker();
