--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -10,32 +10,30 @@
 
         <ul class="nav navbar-nav navbar-center">
           
-            <li class="nav-item">
-              <a class="nav-link" href="/portfolio">Portfolio</a>
-            </li>
+            {# <li class="nav-item"> #}
+              {# <a class="nav-link" href="/portfolio">Portfolio</a> #}
+            {# </li> #}
 
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               	Projekty
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="http://ketocalc.janpeterka.eu" target="_blank">Ketokalkulačka</a>
+              <a class="dropdown-item" href="https://ketokalkulacka.cz" target="_blank">Ketokalkulačka</a>
             </div>
           </li>
 
-           <li class="nav-item dropdown">
+{#            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Školní
             </a>
+          </li> #}
 
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/mms">Multimediální systém - seminární práce</a>
-              <!-- <a class="dropdown-item" href="/pexeso">Pexeso - seminární práce</a> -->
-              <a class="dropdown-item" href="/movie">Multimediální aplikace - seminární práce</a>
-            </div>
+          <li class="nav-item">
+            <a class="nav-link" href="/songbooks">Zpěvníky</a>
           </li>
 
-          <li class="nav-item dropdown">
+{#           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Ostatní
             </a>
@@ -43,7 +41,7 @@
               <a class="dropdown-item" href="/songbooks">Zpěvníky</a>
               <!-- <a class="dropdown-item" href="/bunkrs">Bunkrs</a> -->
             </div>
-          </li>
+          </li> #}
 
         </ul>
 
