Add student_project template
Improve styling

Clean and add videos

Finish videos

Remove videos

Dont track videos

Remove mms videos

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: #eee;
+    font-family: Nunito;
 }
 
 .footer {
@@ -35,4 +36,18 @@ body {
 
 .btn{
     margin-top: 0.5em;
+}
+
+
+/* Atomic styles */
+.w-70 {
+    width: 70%;
+}
+
+.h-30r {
+    height: 30rem;
+}
+
+.m-top-1r {
+    margin-top: 1rem;
 }
