Try fullscreen onclick

--- a/app/templates/student_projects.html.j2
+++ b/app/templates/student_projects.html.j2
@@ -2,17 +2,19 @@
 {% block title %}Jan Peterka{% endblock %}
 {% block script %}
 <script type="text/javascript">
-    var elem1 = document.getElementById("ovozel1");
-    var elem2 = document.getElementById("ovozel2");
-    var elem3 = document.getElementById("obleceni");
-    var elem4 = document.getElementById("gmo");
-    var elem5 = document.getElementById("odpad");
-
-    if (elem1.requestFullscreen) {elem1.requestFullscreen();} else if (elem1.mozRequestFullScreen) {elem1.mozRequestFullScreen();} else if (elem1.webkitRequestFullscreen) {elem1.webkitRequestFullscreen();} else if (elem1.msRequestFullscreen) { elem1.msRequestFullscreen();}
-    if (elem2.requestFullscreen) {elem2.requestFullscreen();} else if (elem2.mozRequestFullScreen) {elem2.mozRequestFullScreen();} else if (elem2.webkitRequestFullscreen) {elem2.webkitRequestFullscreen();} else if (elem2.msRequestFullscreen) { elem2.msRequestFullscreen();}
-    if (elem3.requestFullscreen) {elem3.requestFullscreen();} else if (elem3.mozRequestFullScreen) {elem3.mozRequestFullScreen();} else if (elem3.webkitRequestFullscreen) {elem3.webkitRequestFullscreen();} else if (elem3.msRequestFullscreen) { elem3.msRequestFullscreen();}
-    if (elem4.requestFullscreen) {elem4.requestFullscreen();} else if (elem4.mozRequestFullScreen) {elem4.mozRequestFullScreen();} else if (elem4.webkitRequestFullscreen) {elem4.webkitRequestFullscreen();} else if (elem4.msRequestFullscreen) { elem4.msRequestFullscreen();}
-    if (elem5.requestFullscreen) {elem5.requestFullscreen();} else if (elem5.mozRequestFullScreen) {elem5.mozRequestFullScreen();} else if (elem5.webkitRequestFullscreen) {elem5.webkitRequestFullscreen();} else if (elem5.msRequestFullscreen) { elem5.msRequestFullscreen();}
+    function fullscreen(element) {
+        console.log("full")
+        console.log(element)
+        if (element.requestFullscreen) {
+            element.requestFullscreen();
+        } else if (element.mozRequestFullScreen) {
+            element.mozRequestFullScreen();
+        } else if (element.webkitRequestFullscreen) {
+            element.webkitRequestFullscreen();
+        } else if (element.msRequestFullscreen) {
+            element.msRequestFullscreen();
+        }
+    }
 
 </script>
 {% endblock %}
@@ -27,8 +29,9 @@
     			<h3>Ondřej Kolár, Teodor Chvalina</h3>
     			<div class="row">
     				<div class="col">
-	    			<video id="ovozel1" controls class="w-70"
-	    				   src="{{ url_for('static', filename='videos/student_projects/1B/ovozel1.mp4') }}">Video 1</video>
+	    			<video id="ovozel1" controls class="w-70" onclick=fullscreen(this);>
+                        <source src="{{ url_for('static', filename='videos/student_projects/1B/ovozel1.mp4') }}" />
+                    </video>
     				</div>
     				<div class="col">
 	    			<video id="ovozel2" controls class="w-70"
