--- a/app/templates/student_projects.html.j2
+++ b/app/templates/student_projects.html.j2
@@ -3,8 +3,8 @@
 {% block script %}
 <script type="text/javascript">
     function fullscreen(element) {
-        console.log("full")
-        console.log(element)
+        // console.log("full")
+        // console.log(element)
         if (element.requestFullscreen) {
             element.requestFullscreen();
         } else if (element.mozRequestFullScreen) {
@@ -28,15 +28,11 @@
     			<h2 class="m-top-1r">Ovoce a zelenina</h2>
     			<h3>Ondřej Kolár, Teodor Chvalina</h3>
     			<div class="row">
-    				<div class="col">
 	    			<video id="ovozel1" controls class="w-70" onclick=fullscreen(this);>
                         <source src="{{ url_for('static', filename='videos/student_projects/1B/ovozel1.mp4') }}" />
                     </video>
-    				</div>
-    				<div class="col">
 	    			<video id="ovozel2" controls class="w-70"
 	    				   src="{{ url_for('static', filename='videos/student_projects/1B/ovozel2.mp4') }}">Video 2</video>
-	    			</div>
     			</div>
     		</div>
     		<div>
