--- a/app/templates/poetry/show.html.j2
+++ b/app/templates/poetry/show.html.j2
@@ -11,13 +11,13 @@
 	{% include('navbar.html.j2') %}
 	<div class="container">
 		<div class="col">		
-			Name: {{ poezie.name }}<br>
-			Author: {{ poezie.created_by }}<br>
-			X: {{ poezie.longitude }}<br>
-			Y: {{ poezie.latitude }}
-			<input type="hidden" id="name" value="{{ poezie.name }}">
-			<input type="hidden" id="coords_x" value="{{ poezie.longitude }}">
-			<input type="hidden" id="coords_y" value="{{ poezie.latitude }}">
+			Name: {{ poetry.name }}<br>
+			Author: {{ poetry.created_by }}<br>
+			X: {{ poetry.longitude }}<br>
+			Y: {{ poetry.latitude }}
+			<input type="hidden" id="name" value="{{ poetry.name }}">
+			<input type="hidden" id="coords_x" value="{{ poetry.longitude }}">
+			<input type="hidden" id="coords_y" value="{{ poetry.latitude }}">
 		</div>
 		<div class="col" data-controller="smaps">
 			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
