--- a/app/templates/errors/shutdown.html.j2
+++ b/app/templates/errors/shutdown.html.j2
@@ -1,24 +1,23 @@
-{% extends "base.tpl" %}
+{% extends "base.html.j2" %}
 {% block title %}
-    Tady nemáte co pohledávat
+    Plánovaná odstávka
 {% endblock %}
 
 {% block content %}
     {% include('navbar.html.j2') %}
     <div class="container">
-        <div class="main">
+        <div class="col-12 main">
             <table>
             <td class="col-2"></td>
 
             <td class="col-8">
-                <h1>Na této stránce byste neměli být</h1>
-                Radši se vraťte na <a href="/">hlavní stránku</a>
+            	<h1>Web je v dočasně mimo provoz</h1>
+                Odstávka by neměla trvat déle než 24 hodin.
             </td>
 
             <td class="col-2"></td>
             </table>
-        	
-        </div>
+        </div>  
     </div>
 {% endblock %}
 
