--- a/app/templates/errors/wrongPage.html.j2
+++ b/app/templates/errors/wrongPage.html.j2
@@ -1,23 +1,24 @@
-{% extends "base.tpl" %}
+{% extends "base.html.j2" %}
 {% block title %}
-    Plánovaná odstávka
+    Tady nemáte co pohledávat
 {% endblock %}
 
 {% block content %}
     {% include('navbar.html.j2') %}
     <div class="container">
-        <div class="col-12 main">
+        <div class="main">
             <table>
             <td class="col-2"></td>
 
             <td class="col-8">
-            	<h1>Web je v dočasně mimo provoz</h1>
-                Odstávka by neměla trvat déle než 24 hodin.
+                <h1>Na této stránce byste neměli být</h1>
+                Radši se vraťte na <a href="/">hlavní stránku</a>
             </td>
 
             <td class="col-2"></td>
             </table>
-        </div>  
+        	
+        </div>
     </div>
 {% endblock %}
 
