--- a/app/templates/poetry/index.html.j2
+++ b/app/templates/poetry/index.html.j2
@@ -9,26 +9,27 @@
 
 {% block content %}
 	{% include('navbar.html.j2') %}
-	<div class="container">
-		<div class="row">
-			<div class="col">
-				<form class="form-group" action="/poetry/post" method="post">
-					{{ form.csrf_token }}
-		            {% from "_form_element.html.j2" import render_field %}
-		            {{ render_field(form.name, "form-control") }}
-		            {{ render_field(form.created_by, "form-control") }}
-		            {{ render_field(form.latitude, "form-control") }}
-		            {{ render_field(form.longitude, "form-control") }}
-		            {{ render_field(form.photo, "form-control") }}
-		            {{ render_field(form.submit, "btn btn-primary", False) }}
-				</form>
-			</div>
-			<div class="col" data-controller="smaps">
-    			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
-			</div>
+	<div class="row">
+		<div class="col">
+			<ul id="all_poetry_list">
+				{% for poetry in all_poetry %}	
+				<li data-name="{{ poetry.name }}"
+					data-id="{{ poetry.id }}"
+					data-latitude="{{ poetry.latitude }}"
+					data-longitude="{{ poetry.longitude }}"
+					>
+					<a href="/poetry/show/{{ poetry.id }}">{{ poetry.name }}</a>
+				</li>			
+				{% endfor %}	
+			</ul>
 		</div>
-		
+	
+		<div class="col" data-controller="smaps">
+			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
+		</div>
+	
 	</div>
+		
 	<script type="text/javascript">
       	/* Create map */
 		var center = SMap.Coords.fromWGS84(14.41, 50.08);
@@ -41,13 +42,7 @@
 		map.getSignals().addListener(window, "map-click", this.click); /* Při signálu kliknutí volat tuto funkci */  
 		layer = add_marker_layer(map);
 
-		function click(e, elm) { /* Došlo ke kliknutí, spočítáme kde */
-		    var coords = SMap.Coords.fromEvent(e.data.event, map);
-		    console.log("Kliknuto na " + coords.toWGS84(2).reverse().join(" "));
-		    layer.removeAll()
-	    	add_marker(layer, coords, "Klik")
-		}
-
+		add_all_markers(layer);
 
     function add_marker_layer(map){
 		var layer = new SMap.Layer.Marker();
@@ -57,14 +52,31 @@
     }
 
     function add_marker(layer, coords, name){
-      	var options = {};
+
+    	var card = new SMap.Card();
+		card.getHeader().innerHTML = "<strong>" + name + "</strong>";
+		// card.getBody().innerHTML = "Ahoj, já jsem <em>obsah vizitky</em>!";
+
+		var options = { 
+		    title: name
+		};
+
 		var marker = new SMap.Marker(coords, name, options);
-		marker.decorate(SMap.Marker.Feature.Draggable);
+		marker.decorate(SMap.Marker.Feature.Card, card);
 		layer.addMarker(marker);
-		$("#latitude")[0].value = marker._coords.x
-		$("#longitude")[0].value = marker._coords.y
 		return marker
     }
+
+    function add_all_markers(layer) {
+    	var list = document.getElementById('all_poetry_list').getElementsByTagName('li');
+    	console.log(list)
+
+    	for (var i = list.length - 1; i >= 0; i--) {
+    		console.log(list[i].dataset)
+    		coords = SMap.Coords.fromWGS84(list[i].dataset.latitude, list[i].dataset.longitude)
+    		add_marker(layer, coords, list[i].dataset.name)
+	    }
+	}
 	</script>
 {% endblock %}
 
