--- a/app/templates/poetry/show.html.j2
+++ b/app/templates/poetry/show.html.j2
@@ -16,8 +16,8 @@
 			X: {{ poetry.longitude }}<br>
 			Y: {{ poetry.latitude }}
 			<input type="hidden" id="name" value="{{ poetry.name }}">
-			<input type="hidden" id="coords_x" value="{{ poetry.longitude }}">
-			<input type="hidden" id="coords_y" value="{{ poetry.latitude }}">
+			<input type="hidden" id="latitude" value="{{ poetry.latitude }}">
+			<input type="hidden" id="longitude" value="{{ poetry.longitude }}">
 		</div>
 		<div class="col" data-controller="smaps">
 			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
@@ -26,18 +26,19 @@
 
 	<script type="text/javascript">
       	/* Create map */
-		var center = SMap.Coords.fromWGS84(14.41, 50.08);
+		var longitude = $("#longitude")[0].value
+		var latitude = $("#latitude")[0].value
+
+		var center = SMap.Coords.fromWGS84(latitude, longitude);
 		map = new SMap(JAK.gel("map"), center, 10);
 		map.addDefaultLayer(SMap.DEF_BASE).enable();
 		map.addDefaultControls();
 		map.addControl(new SMap.Control.Sync()); /* Aby mapa reagovala na změnu velikosti průhledu */
 		layer = add_marker_layer(map);
 
-		var coords_x = $("#coords_x")[0].value
-		var coords_y = $("#coords_y")[0].value
 		var name = $("#name")[0].value
 
-		var marker_coords = SMap.Coords.fromWGS84(coords_y, coords_x)
+		var marker_coords = SMap.Coords.fromWGS84(latitude, longitude)
 
 		var marker = add_marker(layer, marker_coords, name)
 
