--- a/app/templates/poetry/show.html.j2
+++ b/app/templates/poetry/show.html.j2
@@ -10,14 +10,15 @@
 {% block content %}
 	{% include('navbar.html.j2') %}
 	<div class="container">
-		<div class="col">		
+		<div id="poetry" class="col"
+				data-name="{{ poetry.name }}"
+				data-latitude="{{ poetry.latitude }}"
+				data-longitude="{{ poetry.longitude }}"
+			>		
 			Name: {{ poetry.name }}<br>
 			Author: {{ poetry.created_by }}<br>
 			X: {{ poetry.longitude }}<br>
 			Y: {{ poetry.latitude }}
-			<input type="hidden" id="name" value="{{ poetry.name }}">
-			<input type="hidden" id="latitude" value="{{ poetry.latitude }}">
-			<input type="hidden" id="longitude" value="{{ poetry.longitude }}">
 		</div>
 		<div class="col" data-controller="smaps">
 			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
@@ -26,19 +27,18 @@
 
 	<script type="text/javascript">
       	/* Create map */
-		var longitude = $("#longitude")[0].value
-		var latitude = $("#latitude")[0].value
+      	var item = document.getElementById("poetry")
+		var latitude = item.dataset.latitude
+		var longitude = item.dataset.longitude
+		var name = item.dataset.name
 
-		var center = SMap.Coords.fromWGS84(latitude, longitude);
-		map = new SMap(JAK.gel("map"), center, 10);
+		var marker_coords = SMap.Coords.fromWGS84(latitude, longitude);
+		map = new SMap(JAK.gel("map"), marker_coords, 10);
 		map.addDefaultLayer(SMap.DEF_BASE).enable();
 		map.addDefaultControls();
 		map.addControl(new SMap.Control.Sync()); /* Aby mapa reagovala na změnu velikosti průhledu */
 		layer = add_marker_layer(map);
 
-		var name = $("#name")[0].value
-
-		var marker_coords = SMap.Coords.fromWGS84(latitude, longitude)
 
 		var marker = add_marker(layer, marker_coords, name)
 
