--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -22,6 +22,16 @@
               <a class="dropdown-item" href="https://ketokalkulacka.cz" target="_blank">Ketokalkulačka</a>
             </div>
           </li>
+          
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Rozdělané projekty
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/poetry/">Texty v krajině</a>
+            </div>
+            
+          </li>
 
 {#            <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
