--- a/app/templates/poetry/index.html.j2
+++ b/app/templates/poetry/index.html.j2
@@ -24,7 +24,7 @@
 			</ul>
 		</div>
 	
-		<div class="col" data-controller="smaps">
+		<div class="col">
 			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
 		</div>
 	
@@ -69,10 +69,7 @@
 
     function add_all_markers(layer) {
     	var list = document.getElementById('all_poetry_list').getElementsByTagName('li');
-    	console.log(list)
-
     	for (var i = list.length - 1; i >= 0; i--) {
-    		console.log(list[i].dataset)
     		coords = SMap.Coords.fromWGS84(list[i].dataset.latitude, list[i].dataset.longitude)
     		add_marker(layer, coords, list[i].dataset.name)
 	    }
