--- a/app/templates/poetry/show.html.j2
+++ b/app/templates/poetry/show.html.j2
@@ -10,18 +10,19 @@
 {% block content %}
 	{% include('navbar.html.j2') %}
 	<div class="container">
-		<div id="poetry" class="col"
-				data-name="{{ poetry.name }}"
-				data-latitude="{{ poetry.latitude }}"
-				data-longitude="{{ poetry.longitude }}"
-			>		
-			Name: {{ poetry.name }}<br>
-			Author: {{ poetry.created_by }}<br>
-			X: {{ poetry.longitude }}<br>
-			Y: {{ poetry.latitude }}
-		</div>
-		<div class="col" data-controller="smaps">
-			<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
+		<div class="row">
+			<div id="poetry" class="col"
+					data-name="{{ poetry.name }}"
+					data-latitude="{{ poetry.latitude }}"
+					data-longitude="{{ poetry.longitude }}"
+				>		
+				Name: {{ poetry.name }}<br>
+				Author: {{ poetry.created_by }}<br>
+				<img style="width:30rem" src="{{ url_for('poetry.images', item_id=poetry.id) }}" alt="{{ poetry.file_path }}" />
+			</div>
+			<div class="col" data-controller="smaps">
+				<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
+			</div>
 		</div>
 	</div>
 
