--- a/app/templates/poetry/show.html.j2
+++ b/app/templates/poetry/show.html.j2
@@ -13,12 +13,15 @@
 		<div class="row">
 			<div id="poetry" class="col"
 					data-name="{{ poetry.name }}"
+					data-created_by="{{ poetry.created_by }}"
 					data-latitude="{{ poetry.latitude }}"
 					data-longitude="{{ poetry.longitude }}"
 				>		
 				Name: {{ poetry.name }}<br>
 				Author: {{ poetry.created_by }}<br>
-				<img style="width:30rem" src="{{ url_for('poetry.images', item_id=poetry.id) }}" alt="{{ poetry.file_path }}" />
+				{% if poetry.file_path != None %}
+					<img style="width:30rem" src="{{ url_for('poetry.images', item_id=poetry.id) }}" alt="{{ poetry.file_path }}" />
+				{% endif %}
 			</div>
 			<div class="col" data-controller="smaps">
 				<div id="map" style="width: 30rem; height: 20rem; margin-top: 1.5rem;"></div>
@@ -32,6 +35,10 @@
 		var latitude = item.dataset.latitude
 		var longitude = item.dataset.longitude
 		var name = item.dataset.name
+		var data = {
+			"created_by": item.dataset.created_by
+		}
+		console.log(data)
 
 		var marker_coords = SMap.Coords.fromWGS84(latitude, longitude);
 		map = new SMap(JAK.gel("map"), marker_coords, 10);
@@ -41,7 +48,7 @@
 		layer = add_marker_layer(map);
 
 
-		var marker = add_marker(layer, marker_coords, name)
+		var marker = add_marker(layer, marker_coords, name, data)
 
     function add_marker_layer(map){
 		var layer = new SMap.Layer.Marker();
@@ -50,9 +57,17 @@
 		return layer;
     }
 
-    function add_marker(layer, coords, name){
-      	var options = {};
+    function add_marker(layer, coords, name, data){
+    	var card = new SMap.Card();
+		card.getHeader().innerHTML = "<strong>" + name + "</strong>";
+		card.getBody().innerHTML = "Vytvořil: "+ data['created_by'];
+
+		var options = { 
+		    title: name
+		};
+
 		var marker = new SMap.Marker(coords, name, options);
+		marker.decorate(SMap.Marker.Feature.Card, card);
 		layer.addMarker(marker);
 		return marker
     }
