Add using user secret key

--- a/app/templates/integrations/main.html.j2
+++ b/app/templates/integrations/main.html.j2
@@ -6,6 +6,8 @@
 	{% include('navbar.html.j2') %}
     <div class="container">
     	integrations
+		<div>Toggl token - {{ current_user.toggl_token }}</div>
+
 		<div>
 	    	Tokens
 	    	{% for token in current_user.tokens %}
