--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -33,11 +33,14 @@
             
           </li>
 
-{#            <li class="nav-item dropdown">
+           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Školní
             </a>
-          </li> #}
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="{{ url_for('WorldView:index') }}">Svět</a>
+            </div>
+          </li>
 
           <li class="nav-item">
             <a class="nav-link" href="/songbooks">Zpěvníky</a>
