--- a/app/templates/education/genetic_world_generator.html.j2
+++ b/app/templates/education/genetic_world_generator.html.j2
@@ -1,11 +1,33 @@
 {% extends "base.html.j2" %}
 {% block title %}Genetic world generator{% endblock %}
 {% block script %}{% endblock %}
+{% block script %}
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+{% endblock %}
 
 {% block content %}
 	{% include('navbar.html.j2') %}
     <div class="container">
-    	{{ world_html }}
+        <div class="row">
+    		
+    	<div class="col-2">
+    		<a href="{{ url_for('WorldView:new_world') }}"><button class="btn btn-danger">Restart</button></a>
+    		<a href="{{ url_for('WorldView:add_generation') }}"><button class="btn btn-primary">Add first generation</button></a>
+    		{# <a href="{{ url_for('WorldView:select_fittest') }}"><button class="btn btn-primary">Select fittest</button></a> #}
+    		<a href="{{ url_for('WorldView:next_generation') }}"><button class="btn btn-primary">Next generation</button></a>
+
+    	</div>
+    	<div class="col-7">
+    	{{ world.html }}
+    	</div>
+        <div class="col-2">
+            Pop. count: {{ world.score.population_count }}<br>
+            Total resources: {{ world.score.total_resources }}<br>
+            <canvas id="myChart" width="400" height="400"></canvas>
+            Max resources: {{ world.score.max_resources }} / {{ world.score.possible_max_resources }}<br>
+
+        </div>
+        </div>
     </div>
 {% endblock %}
 
