Add chart and more

--- a/app/templates/education/genetic_world_generator.html.j2
+++ b/app/templates/education/genetic_world_generator.html.j2
@@ -1,6 +1,9 @@
 {% extends "base.html.j2" %}
 {% block title %}Genetic world generator{% endblock %}
-{% block script %}{% endblock %}
+{% block head %}
+    {{ super() }}
+    {{ init_charts }}
+{% endblock %}
 {% block script %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 {% endblock %}
@@ -12,9 +15,12 @@
     		
     	<div class="col-2">
     		<a href="{{ url_for('WorldView:new_world') }}"><button class="btn btn-danger">Restart</button></a>
-    		<a href="{{ url_for('WorldView:add_generation') }}"><button class="btn btn-primary">Add first generation</button></a>
+            {% if world.score.population_count == 0 %}
+    		  <a href="{{ url_for('WorldView:add_generation') }}"><button class="btn btn-primary">Add first generation</button></a>
+            {% else %}  
+    		  <a href="{{ url_for('WorldView:next_generation') }}"><button class="btn btn-primary">Next generation</button></a>
+            {% endif %}
     		{# <a href="{{ url_for('WorldView:select_fittest') }}"><button class="btn btn-primary">Select fittest</button></a> #}
-    		<a href="{{ url_for('WorldView:next_generation') }}"><button class="btn btn-primary">Next generation</button></a>
 
     	</div>
     	<div class="col-7">
@@ -23,9 +29,8 @@
         <div class="col-2">
             Pop. count: {{ world.score.population_count }}<br>
             Total resources: {{ world.score.total_resources }}<br>
-            <canvas id="myChart" width="400" height="400"></canvas>
+            {{ chart() }}
             Max resources: {{ world.score.max_resources }} / {{ world.score.possible_max_resources }}<br>
-
         </div>
         </div>
     </div>
