Add today to navbar

--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -29,6 +29,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/poetry/">Texty v krajině</a>
+              <a class="dropdown-item" href="/better">Today</a>
             </div>
             
           </li>
