Add prediction tab and tab switch controller

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -3,6 +3,14 @@ body {
     font-family: Nunito;
 }
 
+.hidden {
+    display: none;
+}
+
+.tab[data-active="false"] {
+    display: none;
+}
+
 .footer {
     position: fixed;
     left: 0;
