--- a/app/templates/main/better_life.html.j2
+++ b/app/templates/main/better_life.html.j2
@@ -15,7 +15,7 @@
 	    	</div>
 
 	    	<div class="tab" data-tab="prediction" data-active=false >
-	    		<h5>Try to predict:</h5>
+	    		<h5>Today you can:</h5>
 	    		<h1>{{ today_prediction }}</h1>
 	    	</div>
     	</div>
