Add basic functionality

--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -30,6 +30,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/poetry/">Texty v krajině</a>
               <a class="dropdown-item" href="/better">Today</a>
+              <a class="dropdown-item" href="{{ url_for('blog.index') }}">Blog</a>
             </div>
             
           </li>
