--- a/app/templates/navbar.html.j2
+++ b/app/templates/navbar.html.j2
@@ -20,6 +20,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="https://ketokalkulacka.cz" target="_blank">Ketokalkulačka</a>
+              <a class="dropdown-item" href="https://skautskakucharka.cz" target="_blank">Skautská kuchařka</a>
             </div>
           </li>
           
@@ -28,7 +29,7 @@
                 Rozdělané projekty
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/poetry/">Texty v krajině</a>
+              {# <a class="dropdown-item" href="/poetry/">Texty v krajině</a> #}
               <a class="dropdown-item" href="/better">Today</a>
             </div>
             
@@ -46,17 +47,6 @@
           <li class="nav-item">
             <a class="nav-link" href="/songbooks">Zpěvníky</a>
           </li>
-
-{#           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Ostatní
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/songbooks">Zpěvníky</a>
-              <!-- <a class="dropdown-item" href="/bunkrs">Bunkrs</a> -->
-            </div>
-          </li> #}
-
         </ul>
 
     </div>
