--- a/app/templates/base.html.j2
+++ b/app/templates/base.html.j2
@@ -4,6 +4,8 @@
 {% block head %}
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
 
     {% block links %}
         <!-- Bootstrap -->
@@ -32,7 +34,7 @@
 {% endblock head %}
 </head>
 <body>
-    <div id="content">
+    <div id="content container">
     	{% block content %}{% endblock %}
     </div>
     <div id="footer" class="footer">
