--- a/app/templates/main/dashboard.html.j2
+++ b/app/templates/main/dashboard.html.j2
@@ -1,10 +1,9 @@
 {% extends "base.html.j2" %}
-{% block title %}Jan Peterka{% endblock %}
+{% block title %} jan peterka {% endblock %}
 {% block script %}{% endblock %}
 
 {% block content %}
 	{% include('navbar.html.j2') %}
-    <div class="container">
-    </div>
+    <div class="container"></div>
 {% endblock %}
 
