--- a/app/templates/javascript/stimulus.js.html
+++ b/app/templates/javascript/stimulus.js.html
@@ -1,4 +1,24 @@
-<script src="https://unpkg.com/stimulus/dist/stimulus.umd.js"></script>
+{% macro stimulus() %}
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/platform/1.3.5/platform.min.js"></script>
 <script type="text/javascript">
-	const application = Stimulus.Application.start()
+	if (platform.name == "IE"){window.location.replace("https:ketokalkulacka.cz/support/unsupported_browser");}
 </script>
+
+<script type="module">
+
+import { Application, Controller } from "https://unpkg.com/@hotwired/stimulus/dist/stimulus.js"
+window.Stimulus = Application.start()
+
+{% for controller in varargs %}
+	{% if controller == "tab-switcher" %}
+		{% include 'javascript/_tab_switcher_controller.js' %}
+	{% else %}
+		console.log("Tento Stimulus controller neexistuje:")
+		console.log(controller)
+	{% endif %}
+{% endfor %}
+
+</script>
+
+{% endmacro %}
